GNOME Bugzilla – Bug 738527
Crash when trying to get the scale factor after the main window has been destroyed
Last modified: 2015-02-23 15:40:18 UTC
I noticed this in my 'coredumpctl list' with 3.14.0: Core was generated by `/usr/bin/gnome-photos --gapplication-service'. Program terminated with signal SIGSEGV, Segmentation fault.
+ Trace 234223
$3 = 0x26c9190 [PhotosApplication] (gdb) print *app $4 = {parent_instance = {g_type_instance = {g_class = 0x26c80f0}, ref_count = 2, qdata = 0x2711530}, priv = 0x26c9100} (gdb)
Created attachment 290347 [details] [review] Fix crash when reading scale factor after window has been destroyed
Created attachment 297680 [details] [review] Fix crash when trying to use window after it has been destroyed